k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contoso
  labels:
    app.kubernetes.io/part-of: contoso-electronics
