k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: contoso
  labels:
    app: product-service
    app.kubernetes.io/part-of: contoso-electronics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: acrcontosomicroprod.azurecr.io/product-service:v1
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: contoso
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
